fix(highcharts): `<text>` color broken with 5.2.2 in dark mode

--- a/styles/index.css
+++ b/styles/index.css
@@ -532,10 +532,6 @@ input[type="reset"],
 
     .highcharts-tooltip-box {
       fill: rgb(var(--color-white));
-
-      text {
-        fill: rgb(var(--color-black)) !important;
-      }
     }
   }
 }
